feat: 新增按 Key 查询项目、按 Name 查询环境接口，并调整 Sidecar 元数据标识为 ProjectKey/EnvName (#644)
